Grid/Table spacing fixes

--- a/src/Table/table.css
+++ b/src/Table/table.css
@@ -10,22 +10,30 @@
 {
     font-variant-numeric:	lining-nums tabular-nums;
     overflow-wrap:          break-word;
+
+    margin-bottom: 0;
+
+    .row
+    {
+        margin-bottom: 0;
+    }
 }
 
 .borders__rows,
 .borders__cells,
 .zebra
 {
+    margin-bottom:  2rem;
+
     .row,
     .headerRow
     {
-        margin-left:    0;
-        margin-right:   0;
-        margin-bottom:  0;
+        margin: 0;
     }
 
     .cell
     {
+        margin:     0;
         background: var( --PC-WHITE );
     }
 }
